Added none option to extras.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -62,10 +62,11 @@
                 <input type="checkbox" class="ingredient" name="topping" value="Ranch" checked> Ranch!|
                 <input type="checkbox" class="ingredient" name="topping" value="Sriracha" checked> Sriracha!
                 <br> Add extra:
-                <input type="radio" class="ingredient" name="extra" value="Cheddar" checked> Cheddar! |
-                <input type="radio" class="ingredient" name="extra" value="Gouda"> Gouda! |
+                <input type="radio" class="ingredient" name="extra" value="" checked> None! |
+                <input type="radio" class="ingredient" name="extra" value="Cheddar"> Cheddar! |
                 <input type="radio" class="ingredient" name="extra" value="Swiss"> Swiss! |
                 <input type="radio" class="ingredient" name="extra" value="Treeline Vegan"> Treeline Vegan Cheese!
+                
             </div>
         </div>
         <button type="submit">Add Burger</button>
